@@ -1,3 +1,7 @@
+2016-11-27  Per Bothner  <per@bothner.com>
+
+	* PrimProcedure (canCompile): New method.
+
 2016-11-06  Per Bothner  <per@bothner.com>
 
 	* ApplicationMainSupport.java: (propertyFields): Add console:type.
